--- a/pom.xml
+++ b/pom.xml
@@ -55,28 +55,30 @@
 				</configuration>
 			</plugin>
 			<plugin>
-		        <artifactId>maven-assembly-plugin</artifactId>
-		        <version>3.0.0</version>
-		        <configuration>
-		          <descriptorRefs>
-		            <descriptorRef>jar-with-dependencies</descriptorRef>
-		          </descriptorRefs>
-		          <archive>
-		            <manifest>
-		              <mainClass>tech.greenfield.vertx.nuts.Nuts</mainClass>   
-		            </manifest>
-		          </archive>
-		        </configuration>
-		        <executions>
-		          <execution>
-		            <id>make-assembly</id> <!-- this is used for inheritance merges -->
-		            <phase>package</phase> <!-- bind to the packaging phase -->
-		            <goals>
-		              <goal>single</goal>
-		            </goals>
-		          </execution>
-		        </executions>
-		      </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<createDependencyReducedPom>true</createDependencyReducedPom>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<manifestEntries>
+										<Main-Class>tech.greenfield.vertx.nuts.Nuts</Main-Class>
+									</manifestEntries>
+								</transformer>
+							</transformers>
+							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	
