--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,11 @@ deploy:
   image: maven
 
 s3:
- stage: s3
- image: python
- script:
-  - pip install awscli
-  - aws s3 sync --storage-class REDUCED_REDUNDANCY --acl public-read ./target/staging/ s3://cloudonix-dist/maven2/releases
+  stage: s3
+  image: python
+  script:
+    - pip install awscli
+    - aws s3 sync --storage-class REDUCED_REDUNDANCY --acl public-read ./target/staging/ s3://cloudonix-dist/maven2/releases
+  only:
+    - master
   
