--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>tech.greenfield</groupId>
 	<artifactId>nuts</artifactId>
 
-	<version>0.2.6-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>nuts</name>
 <!-- 	<url>https://github.com/GreenfieldTech/nuts</url> -->
